simple demo done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,15 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+button {
+  font-weight: bold;
+}
+
+button.follow {
+  background-color: aquamarine;
+}
+
+button.unfollow {
+  background-color: #ef5f5f;
+}
